java_library(
    name = "example",
    srcs = glob(["src/main/java/com/example/*.java"]),
    deps = [
      "@io_grpc_grpc_java//core",
    ],
    plugins = [
      ":io_grpc_grpc_java_api_checker_plugin",
    ],
)

java_plugin(
    name = "io_grpc_grpc_java_api_checker_plugin",
    deps = [
        "@com_google_guava_guava//jar",
        "@io_grpc_grpc_java_api_checker//jar",
    ],
)
